--- a/projetos.html
+++ b/projetos.html
@@ -15,7 +15,7 @@
         <img src="assets/FotodoPerfil.jpeg" alt="Bruno Máximo" class="perfil-img">
       </div>
       <h1>Bruno Máximo</h1>
-      <p>Desenvolvedor em formação | Apaixonado por dados</p>
+      <p>Analista de dados em formação</p>
       <nav>
         <a href="index.html">Sobre</a>
         <a href="projetos.html" class="active">Projetos</a> <!-- Destaque para a página atual -->
